Add rocqstar work & master thesis

--- a/_config.yml
+++ b/_config.yml
@@ -26,9 +26,9 @@
 title: andrei kozyrev
 author: Andrei Kozyrev
 description: >- # this means to ignore newlines until "baseurl:"
-  The research website of Andrei Kozyrev.
+  Homepage and reseach website of Andrei Kozyrev.
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "http://andrei-kozyrev.net" # the base hostname & protocol for your site
+url: "https://andrei-kozyrev.net" # the base hostname & protocol for your site
 
 # The order to list your pages in the nav bar, separated by single spaces
 # The first element is whatever you would like index.html to be called
